--- a/main.tex
+++ b/main.tex
@@ -5,11 +5,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 习题课
 
-\title{2022春高等代数习题课}
+% \title{2022春高等代数习题课}
 
 % \input{content-2/class-1}
 % \input{content-2/class-2}
-\input{content-2/class-3}
+% \input{content-2/class-3}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 课后作业
@@ -39,6 +39,8 @@
 % 课后作业
 
 % \title{2021秋高等代数课后习题}
+
+\input{assignments/2022spring-extras}
 
 % \input{assignments/assignment-1}
 % \input{assignments/assignment-2}
