--- a/content-2/class-4.tex
+++ b/content-2/class-4.tex
@@ -120,8 +120,8 @@ $$
 \newpageorvspace
 
 
-{\bf 第六题}. 设$\mathscr{A}$是$n$维向量空间$V$的一个线性变换。对于$V$的一组基$\alpha_1, \alpha_2, \ldots, \alpha_n$和$\alpha = x_1\alpha_1 + \cdot + x_n\alpha_n$, 有
-$$\mathscr{A}\alpha = x_n\alpha_1 + \cdot + x_1\alpha_n,$$
+{\bf 第六题}. 设$\mathscr{A}$是$n$维向量空间$V$的一个线性变换。对于$V$的一组基$\alpha_1, \alpha_2, \ldots, \alpha_n$和$\alpha = x_1\alpha_1 + \cdots + x_n\alpha_n$, 有
+$$\mathscr{A}\alpha = x_n\alpha_1 + \cdots + x_1\alpha_n,$$
 判断$\mathscr{A}$是否可对角化，并证明你的结论。
 
 {\bf 解}: 设$\lambda$为$\mathscr{A}$的一个特征值，$\sum\limits_{i=1}^n x_i \alpha_i \neq 0$为对应的特征向量，即$x_1,\ldots,x_n$不全为0，且有
