Updates from Overleaf

--- a/content-2/class-4.tex
+++ b/content-2/class-4.tex
@@ -49,7 +49,7 @@ $$(\mathscr{BA})^n(a_nx^n + \cdots + a_1x + a_0) = \sum_{\substack{1\leqslant k 
 $$\operatorname{Im}((\mathscr{BA})^n) = \left\{ \sum_{\substack{1\leqslant k \leqslant n \\ p\nmid k}} a_k x^k \ \middle|\ a_k\in\mathbb{F},~ 1\leqslant k \leqslant n, ~ p\nmid k \right\}$$
 它的一组基可取为$\{ x^k \ |\ 1 \leqslant k \leqslant n, q\nmid k \}$, 维数等于$n - \left\lfloor \dfrac{n}{p} \right\rfloor$. $\ker((\mathscr{BA})^n)$维数等于$\# (\{ 0 \} \cup \{ k \ |\ 1\leqslant k \leqslant n, ~ p\nmid k \}) = 1 + \left\lfloor \dfrac{n}{p} \right\rfloor.$ 它的一组基可以取为$1, x^p, \ldots, x^{mp}$, 其中$m = \left\lfloor \dfrac{n}{p} \right\rfloor.$
 
-若将$\mathscr{BA}$视作$V$上的线性变换，则以上关于核空间的论断不变。$\operatorname{char}(\mathbb{F}) = 0$时，象空间基为$\{x^m \ |\ m\in\mathbb{N}_+ \}$, 是一个无穷维线性空间。$\operatorname{char}(\mathbb{F}) = p$时象空间基为$\{ x^m \ |\ m\in\mathbb{N}_+, ~ p \nmid m \}$, 也是一个无穷维线性空间。
+若将$\mathscr{BA}$视作$V$上的线性变换，则$\operatorname{char}(\mathbb{F}) = 0$时，关于核空间的论断不变。象空间基为$\{x^m \ |\ m\in\mathbb{N}_+ \}$, 是一个无穷维线性空间。$\operatorname{char}(\mathbb{F}) = p$时，核空间一组基可以取为$\{ x^m \ |\ m\in\mathbb{N}, ~ p \mid m \}$，象空间基为$\{ x^m \ |\ m\in\mathbb{N}_+, ~ p \nmid m \}$, 都是无穷维线性空间。
 
 \newpageorvspace
 
