--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,7 @@
 % \input{content-2/class-2}
 % \input{content-2/class-3}
 \input{content-2/class-4}
+% \input{content-2/class-5}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 课后作业
