--- a/content-2/class-5.tex
+++ b/content-2/class-5.tex
@@ -93,8 +93,8 @@ f(X) = (X-x_1) \cdots (X-x_k) (X^2 - (z_1+\overline{z}_1)X + z_1\overline{z}_1) 
 其中$x_1, \cdots, x_k$为实根, $z_1, \overline{z}_1, \cdots, z_m, \overline{z}_m$为复根。奇数阶的实系数多项式至少有一个实根，而且至少有一个实根的代数重数为奇数。
 
 令$\lambda_0$为$\mathscr{A}$的一个代数重数为奇数的实根，令$W_{\lambda_0}$为其根子空间，维数为奇数。任取$\alpha \in W_{\lambda_0}$, 有足够大的正整数$s$满足
-$$\mathscr{A}^s(\mathscr{B}(\alpha)) = \mathscr{B} (\mathscr{A}^s(\alpha)) = \mathscr{B}(0) = 0.$$
-故$\mathscr{B}(\alpha) \in W_{\lambda_0}$, 即知$W_{\lambda_0}$是$\mathscr{B}$的不变子空间。由于$W_{\lambda_0}$是奇数维的，故存在实特征值$\mu_0$以及对应的特征向量$\beta \in W_{\lambda_0}$, 满足$\mathscr{B}(\beta) = \mu_0 \beta$. 由于$\beta \in W_{\lambda_0}$, 令$s$为满足
+$$(\mathscr{A}-\lambda_0)^s(\mathscr{B}(\alpha)) = \mathscr{B} ((\mathscr{A}-\lambda_0)^s(\alpha)) = \mathscr{B}(0) = 0.$$
+故$\mathscr{B}(\alpha) \in W_{\lambda_0}$, 即知$W_{\lambda_0}$是$\mathscr{B}$的不变子空间。由于$W_{\lambda_0}$是奇数维的实线性空间，故存在实特征值$\mu_0$以及对应的特征向量$\beta \in W_{\lambda_0}$, 满足$\mathscr{B}(\beta) = \mathscr{B}|_{W_{\lambda_0}}(\beta) = \mu_0 \beta$. 由于$\beta \in W_{\lambda_0}$, 令$s$为满足
 $(\mathscr{A} - \lambda_0)^s \beta = 0$的最小的正整数，$s \geqslant 1$. 令$\beta' = (\mathscr{A} - \lambda_0)^{s-1} \beta \neq 0$, 有
 \begin{align*}
 (\mathscr{A} - \lambda_0) \beta' & = (\mathscr{A} - \lambda_0)^s \beta = 0, \\
@@ -119,9 +119,11 @@ $(\mathscr{A} - \lambda_0)^s \beta = 0$的最小的正整数，$s \geqslant 1$. 
 
 \newpageorvspace
 
-{\bf 证明}：由于$\alpha_1 + \cdots + \alpha_t \in \mathbb{F}\alpha_1 \oplus \cdots \oplus \mathbb{F}\alpha_t$, 所以$U = \mathbb{F}[\mathscr{A}](\alpha_1 + \cdots + \alpha_t) \subseteq \mathbb{F}\alpha_1 \oplus \cdots \oplus \mathbb{F}\alpha_t$. 我们来证明另一个方向的包含关系。我们希望证明，任取$1 \leqslant i \leqslant t$, 都有$\alpha_i \in \mathbb{F}[\mathscr{A}](\alpha_1 + \cdots + \alpha_t)$. 我们需要寻找一个多项式$f(\lambda)$, 使得$f(\mathscr{A}) (\alpha_1 + \cdots + \alpha_t) = \alpha_i$. 我们可以取
-$$f(\lambda) = \prod\limits_{\substack{1 \leqslant j \leqslant t \\ j \neq i}} \dfrac{\lambda - \lambda_j}{\lambda_i - \lambda_j},$$
-这个多项式满足$f(\mathscr{A})(\alpha_i) = \alpha_i$, $f(\mathscr{A})(\alpha_i) = 0$, $\forall j \neq i$. 
+{\bf 证明}：由于$\mu_1\alpha_1 + \cdots + \mu_t\alpha_t \in \mathbb{F}\alpha_1 \oplus \cdots \oplus \mathbb{F}\alpha_t$对任意一组数$\mu_1,\ldots,\mu_t$, 而且任取$f(\lambda) \in \mathbb{F}[\lambda]$, 有$f(\mathscr{A})(\alpha_i) = f(\lambda_i) \alpha_i$, 所以$\mathbb{F}[\mathscr{A}](\alpha_1 + \cdots + \alpha_t) \subseteq \mathbb{F}\alpha_1 \oplus \cdots \oplus \mathbb{F}\alpha_t$.
+
+我们来证明另一个方向的包含关系。我们希望证明，任取$1 \leqslant i \leqslant t$, 都有$\alpha_i \in \mathbb{F}[\mathscr{A}](\alpha_1 + \cdots + \alpha_t)$. 我们需要寻找一个多项式$f_i(\lambda)$, 使得$f_i(\mathscr{A}) (\alpha_1 + \cdots + \alpha_t) = \alpha_i$. 我们可以取
+$$f_i(\lambda) = \prod\limits_{\substack{1 \leqslant j \leqslant t \\ j \neq i}} \dfrac{\lambda - \lambda_j}{\lambda_i - \lambda_j},$$
+这个多项式满足$f_i(\mathscr{A})(\alpha_i) = \alpha_i$, $f_i(\mathscr{A})(\alpha_j) = 0$, $\forall j \neq i$. 
 
 
 \newpageorvspace
@@ -131,11 +133,15 @@ $$f(\lambda) = \prod\limits_{\substack{1 \leqslant j \leqslant t \\ j \neq i}} \
 
 \newpageorvspace
 
-{\bf 证明}. 这题实际上是要证明两个结论：1. $\mathbb{F}[\mathscr{A}]\alpha + \mathbb{F}[\mathscr{A}]\beta = \mathbb{F}[\mathscr{A}]\alpha \oplus \mathbb{F}[\mathscr{A}]\beta$; 2. $\mathbb{F}[\mathscr{A}]\alpha \oplus \mathbb{F}[\mathscr{A}]\beta = \mathbb{F}[\mathscr{A}](\alpha + \beta)$.
+{\bf 证明}. 这题实际上是要证明两个结论：
 
-对于第1个结论，我们只要证明$\mathbb{F}[\mathscr{A}]\alpha \cap \mathbb{F}[\mathscr{A}]\beta = \{0\}$. 任取$\gamma \in \mathbb{F}[\mathscr{A}]\alpha \cap \mathbb{F}[\mathscr{A}]\beta$, 那么存在多项式$f_1, f_2$使得
+1. $\mathbb{F}[\mathscr{A}]\alpha + \mathbb{F}[\mathscr{A}]\beta = \mathbb{F}[\mathscr{A}]\alpha \oplus \mathbb{F}[\mathscr{A}]\beta$;
+
+2. $\mathbb{F}[\mathscr{A}]\alpha \oplus \mathbb{F}[\mathscr{A}]\beta = \mathbb{F}[\mathscr{A}](\alpha + \beta)$.
+
+对于第1个结论，我们只要证明$\mathbb{F}[\mathscr{A}]\alpha \cap \mathbb{F}[\mathscr{A}]\beta = \{0\}$. 任取$\gamma \in \mathbb{F}[\mathscr{A}]\alpha \cap \mathbb{F}[\mathscr{A}]\beta$, 那么存在多项式$f_1(\lambda), f_2(\lambda) \in \mathbb{F}[\lambda]$使得
 $$\gamma = f_1(\mathscr{A})\alpha = f_2(\mathscr{A})\beta.$$
-由于$d_{\alpha}(\lambda)$与$d_{\beta}(\lambda)$互素，所以存在多项式$u,v$使得$u(\lambda)d_{\alpha}(\lambda) + v(\lambda)d_{\beta}(\lambda) = 1$, 那么
+由于$d_{\alpha}(\lambda)$与$d_{\beta}(\lambda)$互素，所以存在多项式$u(\lambda), v(\lambda) \in \mathbb{F}[\lambda]$使得$u(\lambda)d_{\alpha}(\lambda) + v(\lambda)d_{\beta}(\lambda) = 1$, 那么
 \begin{align*}
 \gamma & = (u(\mathscr{A})d_{\alpha}(\mathscr{A}) + v(\mathscr{A})d_{\beta}(\mathscr{A})) (\gamma) \\
 & = f_1(\mathscr{A})u(\mathscr{A})(d_{\alpha}(\mathscr{A})(\alpha)) + f_2(\mathscr{A})v(\mathscr{A})(d_{\beta}(\mathscr{A})(\beta)) \\
@@ -169,7 +175,7 @@ $$\gamma = f_1(\mathscr{A})\alpha = f_2(\mathscr{A})\beta.$$
 & = f(\mathscr{A}) (b_1 f_1(\mathscr{A})(\alpha) + \cdots + b_n f_n(\mathscr{A})(\alpha)) \\
 & = f(\mathscr{A}) (\beta)
 \end{align*}
-所以有$\mathscr{B} = f(\mathscr{A})$.
+由于$\beta$是任取的，所以有$\mathscr{B} = f(\mathscr{A})$.
 
 
 \newpageorvspace
@@ -184,7 +190,7 @@ $$\gamma = f_1(\mathscr{A})\alpha = f_2(\mathscr{A})\beta.$$
 V & \supseteq \mathbb{F}[\mathscr{A}](\alpha) \supseteq \operatorname{span} \{ \alpha, \mathscr{A}\alpha, \mathscr{A}^2\alpha, \ldots, \mathscr{A}^{2k-1}\alpha, \mathscr{A}^{2k}\alpha, \ldots \} \\
 & \supseteq \operatorname{span} \{ \alpha, \mathscr{A}^2\alpha, \ldots, \mathscr{A}^{2k}\alpha, \ldots \} = \mathbb{F}[\mathscr{A}^2](\alpha) = V
 \end{align*}
-所以，上式涉及的$\subseteq$实际上都是相等，于是$V = \mathbb{F}[\mathscr{A}](\alpha)$, $\alpha$也是$\mathscr{A}$的循环向量。
+所以，上式涉及的$\supseteq$实际上都是相等，于是$V = \mathbb{F}[\mathscr{A}](\alpha)$, $\alpha$也是$\mathscr{A}$的循环向量。
 
 反过来是不成立的。例如习题7.3第4题中大家举的例子：
 $$\mathscr{A}: \begin{pmatrix} x \\ y \end{pmatrix} \mapsto \begin{pmatrix} 0 & 1 \\ 0 & 0 \end{pmatrix} \begin{pmatrix} x \\ y \end{pmatrix} = \begin{pmatrix} y \\ 0 \end{pmatrix},$$
