--- a/content-2/class-5.tex
+++ b/content-2/class-5.tex
@@ -1,7 +1,5 @@
 \usepackage{relsize}
 
-
-
 % \renewcommand{\newpageorvspace}{\newpage}
 \renewcommand{\newpageorvspace}{\vspace{2em}}
 
@@ -107,7 +105,7 @@ $(\mathscr{A} - \lambda_0)^s \beta = 0$的最小的正整数，$s \geqslant 1$. 
 
 {\bf 第三题}. 习题7.3第5题. 设$\lambda_1, \ldots, \lambda_t$是线性变换$\mathscr{A}$的不同的特征值，$\alpha_1, \ldots, \alpha_t$分别是数域这些特征值的特征向量。求证：$\alpha_1 + \cdots + \alpha_t$生成的循环子空间$U = \mathbb{F}\alpha_1 \oplus \cdots \oplus \mathbb{F}\alpha_t$.
 
-\newpageorvspace
+% \newpageorvspace
 
 {\bf 证明}：由于$\mu_1\alpha_1 + \cdots + \mu_t\alpha_t \in \mathbb{F}\alpha_1 \oplus \cdots \oplus \mathbb{F}\alpha_t$对任意一组数$\mu_1,\ldots,\mu_t$, 而且任取$f(\lambda) \in \mathbb{F}[\lambda]$, 有$f(\mathscr{A})(\alpha_i) = f(\lambda_i) \alpha_i$, 所以$\mathbb{F}[\mathscr{A}](\alpha_1 + \cdots + \alpha_t) \subseteq \mathbb{F}\alpha_1 \oplus \cdots \oplus \mathbb{F}\alpha_t$.
 
