--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,8 @@
 % \input{content-2/class-2}
 % \input{content-2/class-3}
 % \input{content-2/class-4}
-\input{content-2/class-5}
+% \input{content-2/class-5}
+\input{content-2/class-6}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 课后作业
