add slides Pseudoinverse and Least Squares

--- a/main.tex
+++ b/main.tex
@@ -1,18 +1,18 @@
 
 
-\input{common_preamble}
+% \input{common_preamble}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% 习题课
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% % 习题课
 
-\title{2022春高等代数习题课}
+% \title{2022春高等代数习题课}
 
-% \input{content-2/class-1}
-% \input{content-2/class-2}
-% \input{content-2/class-3}
-% \input{content-2/class-4}
-% \input{content-2/class-5}
-\input{content-2/class-6}
+% % \input{content-2/class-1}
+% % \input{content-2/class-2}
+% % \input{content-2/class-3}
+% % \input{content-2/class-4}
+% % \input{content-2/class-5}
+% \input{content-2/class-6}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 课后作业
@@ -55,5 +55,14 @@
 % \input{assignments/assignment-8}
 % \input{assignments/assignment-9}
 % \input{assignments/assignment-10}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% 其他资料
+
+\input{slides_preamble}
+
+\input{aux/pseudoinverse-least-square}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
