--- a/slides_preamble.tex
+++ b/slides_preamble.tex
@@ -186,7 +186,7 @@
 \usepackage[all,cmtip]{xy}
 \usepackage{dashbox}
 \usepackage{tikz}
-\usetikzlibrary{trees,arrows,matrix,fit}
+\usetikzlibrary{trees,arrows,matrix,fit,external}
 \usepackage{xcolor}
 \usepackage{float}
 \usepackage[justification = centering]{caption}
