--- a/common_preamble.tex
+++ b/common_preamble.tex
@@ -54,8 +54,8 @@
 % \setCJKmainfont[Path = fonts/, BoldFont = simhei.ttf]{simfang.ttf}
 % \setCJKsansfont[Path = fonts/, BoldFont = simhei.ttf]{simfang.ttf}
 
-\setCJKmainfont[Path = fonts/, BoldFont = simhei.ttf]{JDLangZhengTi.ttf}
-\setCJKsansfont[Path = fonts/, BoldFont = simhei.ttf]{JDLangZhengTi.ttf}
+\setCJKmainfont[Path = fonts/, BoldFont = simhei.ttf]{JDLangZhengTi.TTF}
+\setCJKsansfont[Path = fonts/, BoldFont = simhei.ttf]{JDLangZhengTi.TTF}
 
 \usepackage{latexsym,amscd,color}
 \usepackage{amsmath,amsfonts,amssymb,mathrsfs}
