--- a/aux/pseudoinverse-least-square.tex
+++ b/aux/pseudoinverse-least-square.tex
@@ -245,7 +245,7 @@ $$A^TA\widehat{\mathbf{x}} = A^T\mathbf{b}$$
 \begin{itemize}
 \item<1-> 若$r(A) = n$, 那么$r(A^T) = r(A) = n$. 此时$A^TA$可逆，$A^TA\widehat{\mathbf{x}} = A^T\mathbf{b}$有唯一解。于是我们得到唯一的最小二乘解
 $$\widehat{\mathbf{x}} = (A^TA)^{-1}A^T\mathbf{b}.$$
-\item<2-> 若$r(A) < n$, 那么$r(A^T) = r(A) < n$. 此时$A^TA$可逆，$A^TA\widehat{\mathbf{x}} = A^T\mathbf{b}$有无穷多组解，亦即最小二乘解有无穷多组。
+\item<2-> 若$r(A) < n$, 那么$r(A^T) = r(A) < n$. 此时$A^TA$不可逆，$A^TA\widehat{\mathbf{x}} = A^T\mathbf{b}$有无穷多组解，亦即最小二乘解有无穷多组。
 \end{itemize}
 \end{block}
 
