--- a/common_preamble.tex
+++ b/common_preamble.tex
@@ -66,7 +66,7 @@
 \usepackage{dashbox}
 \usepackage{tikz}
 \usetikzlibrary{trees,arrows,decorations.pathmorphing,shapes,backgrounds,positioning,calc,tikzmark,external}
-\tikzexternalize[prefix=tikz/]
+% \tikzexternalize[prefix=tikz/]
 \usepackage{xcolor}
 \usepackage{hyperref}
 % \usepackage[cmintegrals,cmbraces]{newtxmath}
