--- a/main.tex
+++ b/main.tex
@@ -63,6 +63,8 @@
 
 \input{slides_preamble}
 
-\input{aux/pseudoinverse-least-square}
+% \input{aux/pseudoinverse-least-square}
+
+\input{aux/svd}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
