--- a/aux/pseudoinverse-least-square.tex
+++ b/aux/pseudoinverse-least-square.tex
@@ -9,7 +9,7 @@
 %-----------------------------------
 
 \title[Pseudoinverse and Least Squares]{\LARGE \bfseries 伪逆与最小二乘法} % The short title appears at the bottom of every slide, the full title is only on the title page
-\author[Pseudoinverse and Least Squares] % Your institution as it will appear on the bottom of every slide, may be shorthand to save space
+\author[] % Your institution as it will appear on the bottom of every slide, may be shorthand to save space
 {\Large \bfseries Pseudoinverse and Least Squares}
 % \author{Singular Value Decomposition} % Your name
 % \date{\today} % Date, can be changed to a custom date
